<resources>
    <string name="app_name" translatable="false">PS3 Proxy Server for Android</string>
    <string name="start_server">Start the server</string>
    <string name="stop_server">Stop the server</string>
    <string name="status">"Status: "</string>
    <string name="enter_port">Insert the chosen port...</string>
    <string name="enter_ip">Insert the chosen IP...</string>
    <string name="port">"Port: "</string>
    <string name="none">None</string>
    <string name="active">active</string>
    <string name="service_name" translatable="false">PS3 Proxy Server for Android</string>
    <string name="credits">Credits</string>
    <string name="credits_menu">Credits, WARNING and bugs and ideas</string>
    <string name="credits2">- blckbear_ (PSX-Place) - for helping, testing and giving ideas (so huge credits for him);</string>
    <string name="credits4">The original program used in the app (now heavily modified) can be found on GitHub: https://github.com/mondul/PS3-Proxy.</string>
    <string name="credits5">WARNING</string>
    <string name="credits6">This app only works on Android 4.0.3 or newer (I tried to lower as much as I could)!</string>
    <string name="credits7">So, if you need the server to work with Android 4.0 and older (being the minimum, Android 2.2, so lower than 2.2 there is no known way), please follow this tutorial, which was made by the same person who helped in this app:</string>
    <string name="credits8" translatable="false">https://www.psx-place.com/threads/tutorial-how-to-set-up-ps3-proxy-server-on-android.22846/</string>
    <string name="credits9">Bugs and ideas</string>
    <string name="credits10">If you found a bug with the app or you have something in mind that you\'d like to see here (or just want to check for an update), please tell me in this thread (official thread):</string>
    <string name="credits11" translatable="false">https://www.psx-place.com/resources/ps3-proxy-server-for-android.795/</string>
    <string name="go_to_app">Go to the app</string>
    <string name="credits3">- mondul (GitHub/PSX-Place) - for making the program which is behind the app (so amazing credits for him or the app wouldn\'t be possible, at least so easily);</string>
    <string name="credits1">- Edw590 (GitHub) - for making the app;</string>
    <string name="settings">Settings</string>
    <string name="server">Server</string>
    <string name="auto_start">Auto start the server at device boot</string>
    <string name="auto_save_port">Auto save the chosen port</string>
    <string name="auto_save_ip">Auto save the chosen IP</string>
    <string name="visit_website">Visit website</string>
    <string name="invalid_port">"ERROR: Please insert a port between 1024 and 65535 (the default port is 8080)."</string>
    <string name="manual_file">"Manual file: "</string>
    <string name="choose_file">"Choose file"</string>
    <string name="auto_generate_file">"Manually write ps3-updatelist.txt file"</string>
    <string name="no">"No"</string>
    <string name="yes">"Yes"</string>
    <string name="update_ip">"Update IP"</string>
    <string name="chosen_file">"Chosen file path: "</string>
    <string name="new_update">"New app version available!"</string>
    <string name="changelog">"Changelog"</string>
    <string name="please_wait_changelog">"Please wait... The changelog is being processed."</string>
    <string name="download_install_update">"Download and install"</string>
    <string name="ignore_a_day">"Ignore for a day"</string>
    <string name="attention_installation">"This app does not provide an automated download and/or installer, so you will be redirected to the GitHub release download link directly and it will start downloading immediatelly with the browser you choose. After the download is complete, please install the updated version of the app, and then, if you wish, disable 'Unkown sources' again for more safety."</string>
    <string name="disable_auto_updater">Disable the updates notifier (not recommended)</string>
    <string name="check_updates_manually">Manually check for updates</string>
    <string name="update_not_found">No updates available</string>
    <string name="update_not_found_error">Error while searching for updates</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_on_ps3">On the PS3:</string>
    <string name="instructions01">\'\'On your PS3, select Settings ➡ Network Settings ➡ Internet Connection Settings, press ✖ to continue, select Custom method and continue until you get the Proxy Server screen. Choose Use, continue, enter the IP address you got from the app and continue until you reach the save settings page. press ✖ to save settings and press it again if you want to test the connection. You should now be able to connect to PSN.\'\' (from mondul\'s PS3-Proxy GitHub page, modified)</string>
    <string name="instructions_on_app">On the app:</string>
    <string name="instructions02">Explanations about some of the app features:</string>
    <string name="instructions09">- When there\'s a new update, every time you start the app, the notifier will warn you about a new update. You can choose to disable the notification for a day, clicking on Ignore on the bottom of the screen. If you click Back, the notification will not be disabled and will keep showing. In the updates screen, it\'s now possible to install the update automatically (optional, the update can be downloaded and installed manually if you refuse the permission or stop the download). This stores the update installer in a folder called PPSFA_updates_delete_this_please in the root of your external storage directory. You can delete that folder after the app has been updated, as it will be consuming space.</string>
    <string name="go_to_instructions">Go to Instructions</string>
    <string name="how_to_use">How to use</string>
    <string name="restart_service_1" translatable="false">---PS3 Proxy Server for Android---</string>
    <string name="restart_service_2">The IP address changed. Restarting the server as requested...</string>
    <string name="notification_restart_service_request_title">PS3 Proxy Server - IP changed</string>
    <string name="notification_restart_service_request_content">Click to restart the server and reload the IP</string>
    <string name="error_ip">Probably the entered IP address is not correct</string>
    <string name="official_ps3_updatelist">Use official ps3-updatelist.txt file</string>
    <string name="realtime_logs">Real-time logging</string>
    <string name="rules">Rules</string>
    <string name="whats_new_psx_place_news">"Redirect What's New pictures to PSX-Place's news pictures"</string>
    <string name="ps_store_psx_place_news">"Redirect PS Store icon pictures to PSX-Place's news pictures"</string>
    <string name="tv_video_services_psx_place_news">"Redirect TV/Video Services pictures to PSX-Place's news pictures"</string>
    <string name="whats_new_rss_feed">Redirect What\'s New pictures to all pictures present on an RSS Feed</string>
    <string name="ps_store_rss_feed">Redirect PS Store pictures to all pictures present on an RSS Feed</string>
    <string name="tv_video_services_rss_feed">Redirect TV/Video Services pictures to all pictures present on an RSS Feed</string>
    <string name="whats_new_rss_feed_url">What\'s New RSS feed URL</string>
    <string name="ps_store_rss_feed_url">PS Store icon RSS feed URL</string>
    <string name="tv_video_services_rss_feed_url">TV/Video Services RSS feed URL</string>
    <string name="custom_rules">Bellow, insert custom rules for the server. To redirect an URL to a file, please do as the follwing: URL --> File_path. Every redirect rule must be on a single line. So, to add more, just press ENTER and add another rule. Insert the exact URL you want and then select Choose File and the following will be added to the end of the edit text area: \' --> /path/to/chosen.file\'. Don\'t add more than the 2 spaces shown above (one space before and another one after the arrow). Do exactly as shown or it won\'t work.</string>
    <string name="custom_redirection_rules">"Custom URL redirection rules"</string>
    <string name="save_logs">Save logs to PPSFA_Logsfile.html</string>
    <string name="notificaion_save_logs_succeeded_title">PS3 Proxy Server - Save logfile succeeded</string>
    <string name="notificaion_save_logs_succeeded_content">File saved to the selected location</string>
    <string name="notificaion_save_logs_failed_title">PS3 Proxy Server - Save logfile failed</string>
    <string name="notificaion_save_logs_failed_content">Please try to save again</string>
    <string name="notificaion_save_logs_file_exists_title">PS3 Proxy Server - Logfile already exists</string>
    <string name="notificaion_save_logs_file_exists_content">Please delete the existing file and try again</string>
    <string name="choose_folder">Choose folder</string>
    <string name="update_port">Update port</string>
    <string name="see_requests">See accessed HTTP URLs and HTTPS hosts in the logs</string>
    <string name="check_logs">Check logs</string>
    <string name="notificaion_download_update_file_failed_title">PS3 Proxy Server - Download update file failed</string>
    <string name="toast_save_update_file_succeeded">Update file downloaded successfully</string>
    <string name="notification_download_update_file_title">PS3 Proxy Server - Updating the app...</string>
    <string name="download_update_file">Downloading the new update...</string>
    <string name="install_update">Install update</string>
    <string name="notificaion_download_update_file_failed_content">Click here to download and install it manually</string>
    <string name="instructions04">- Manually write ps3-updatelist.txt file, if for some reason the automatic one doesn\'t work for you (please tell me if it doesn\'t, might be a region issue - or not, and just write your own file);</string>
    <string name="instructions05">- The IP is automatic when you start the app. If you have the server running and the IP has been changed (for example, a network change), just click Update IP and it will restart the server with the new IP you have. If the IP didn\'t change and you clicked Update IP, nothing will happen. The same applies to the notification that will come up when there is an IP change. Click on it to restart the server with the new IP. On boot, if the IP changes (for example, if the device takes some time to start WiFi), it will automatically restart without asking, but only on the boot startup.</string>
    <string name="instructions06">"- About pictures redirection. As a start, all of this was part of the idea of redirecting What's New XML to PSX-Place's news like DeViL303 did in CFW - thanks to DeViL for letting me use the XML to redirect the news. But the original XML is in HTTPS, so it would probably work in CFW, but not on HAN or pure OFW, so only the pictures will be redirected. ATTENTION - If you enable both What's New and PS Store icon redirection, What's New URL will be used and both will be redirected to the same pictures (this because in some countries, What's New and PS Store icon have the same pictures, so they are all redirected at once). So either enable one or the other, or enable both to have the pictures in both places. You can also redirect to RSS feeds, like YouTube channels feeds (search on Google for that, Google's your friend haha), websites RSS feeds, any feed you like that has pictures. "</string>
    <string name="instructions07">- Custom URL redirection rules will only work for HTTP URLs. HTTPS is safer (S = Secure) and seems not to be possible.</string>
</resources>