<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rules">

    <include
        android:id="@+id/toolbar_rules"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_rules"
        android:layout_marginTop="-5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/official_ps3_updatelist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/official_ps3_updatelist"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/official_ps3_updatelist_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/write_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/auto_generate_file"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/manual_ps3_updatelist_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/button_choose_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/choose_file" />

            <TextView
                android:id="@+id/chosen_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/chosen_file"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/custom_rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/custom_rules"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/custom_rules_urls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/custom_redirection_rules"
                android:inputType="textMultiLine"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <Button
                android:id="@+id/button_choose_file_custom_urls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/choose_file" />

            <TextView
                android:id="@+id/whats_new_psx_place_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/whats_new_psx_place_news"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/whats_new_psx_place_news_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/whats_new_rss_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/whats_new_rss_feed"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/whats_new_rss_feed_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/whats_new_rss_feed_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/whats_new_rss_feed_url"
                android:inputType="textUri"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <TextView
                android:id="@+id/ps_store_psx_place_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ps_store_psx_place_news"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ps_store_psx_place_news_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/ps_store_rss_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ps_store_rss_feed"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ps_store_rss_feed_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/ps_store_rss_feed_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/ps_store_rss_feed_url"
                android:inputType="textUri"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <TextView
                android:id="@+id/tv_video_services_psx_place_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_video_services_psx_place_news"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/tv_video_services_psx_place_news_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_video_services_rss_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_video_services_rss_feed"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/tv_video_services_rss_feed_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/tv_video_services_rss_feed_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/tv_video_services_rss_feed_url"
                android:inputType="textUri"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <TextView
                android:id="@+id/espaco_branco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>